<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailTeamActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmerDetailTeam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <include layout="@layout/placeholder_detail_team"/>
        </com.facebook.shimmer.ShimmerFrameLayout>
        <LinearLayout
            android:id="@+id/detailView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <FrameLayout
                android:paddingBottom="30dp"
                android:paddingTop="30dp"
                android:paddingStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/imgDetailTeam"
                        tools:src="@color/colorPlaceholder"
                        android:layout_gravity="center"
                        android:layout_width="100dp"
                        android:layout_height="100dp"/>
                    <TextView
                        android:id="@+id/tvDetailTeamName"
                        tools:text="Nama Team"
                        android:layout_marginTop="15dp"
                        android:textAlignment="center"
                        android:textColor="@color/colorMatte"
                        android:fontFamily="@font/rubik_medium"
                        android:textSize="30sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </FrameLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_marginTop="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:text="@string/leaguet"
                            android:textSize="15sp"
                            android:textColor="@color/colorMatte"
                            android:fontFamily="@font/rubik_light"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/tvDetailTeamLeague"
                            tools:text="English Premier League"
                            android:textSize="20sp"
                            android:textColor="@color/colorMatte"
                            android:fontFamily="@font/rubik"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginTop="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:text="@string/formed_yeart"
                            android:textSize="15sp"
                            android:textColor="@color/colorMatte"
                            android:fontFamily="@font/rubik_light"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/tvDetailTeamYear"
                            tools:text="1982"
                            android:textSize="20sp"
                            android:textColor="@color/colorMatte"
                            android:fontFamily="@font/rubik"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginTop="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:text="@string/stadiumt"
                            android:textSize="15sp"
                            android:textColor="@color/colorMatte"
                            android:fontFamily="@font/rubik_light"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/tvDetailTeamStadium"
                            tools:text="Emirates Stadium (Holloway, London)"
                            android:textSize="20sp"
                            android:textColor="@color/colorMatte"
                            android:fontFamily="@font/rubik"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginTop="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:text="@string/countryt"
                            android:textSize="15sp"
                            android:textColor="@color/colorMatte"
                            android:fontFamily="@font/rubik_light"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/tvDetailTeamCountry"
                            tools:text="England"
                            android:textSize="20sp"
                            android:textColor="@color/colorMatte"
                            android:fontFamily="@font/rubik"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginTop="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:text="@string/descriptiont"
                            android:textSize="15sp"
                            android:textColor="@color/colorMatte"
                            android:fontFamily="@font/rubik_light"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/tvDetailTeamDesc"
                            tools:text="@string/desc_item_detail"
                            android:textSize="20sp"
                            android:textColor="@color/colorMatte"
                            android:fontFamily="@font/rubik"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>