<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:id="@+id/intentKlasemen"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        app:cardCornerRadius="3dp"
        app:cardElevation="3dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvTeamKlasemen"
                tools:text="Team Name"
                android:fontFamily="@font/rubik_medium"
                android:textSize="18sp"
                android:textColor="@color/colorMatte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5">
                <ImageView
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:id="@+id/imgTeamKlasemen"
                    android:layout_width="70dp"
                    android:layout_height="70dp"/>
                <LinearLayout
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/played"
                        android:layout_marginTop="5dp"
                        android:textAlignment="center"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/colorMatte"
                        android:fontFamily="@font/rubik"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <ImageView
                        android:background="@color/colorMatte"
                        android:layout_width="20dp"
                        android:layout_height="20dp"/>
                    <TextView
                        android:id="@+id/tvTeamPlayed"
                        tools:text="10"
                        android:layout_marginTop="5dp"
                        android:textAlignment="center"
                        android:textColor="@color/colorMatte"
                        android:fontFamily="@font/rubik"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/win"
                        android:layout_marginTop="5dp"
                        android:textAlignment="center"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/colorMatte"
                        android:fontFamily="@font/rubik"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <ImageView
                        android:background="@color/colorGreen"
                        android:layout_width="20dp"
                        android:layout_height="20dp"/>
                    <TextView
                        android:id="@+id/tvTeamWin"
                        tools:text="10"
                        android:layout_marginTop="5dp"
                        android:textAlignment="center"
                        android:textColor="@color/colorMatte"
                        android:fontFamily="@font/rubik"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/draw"
                        android:layout_marginTop="5dp"
                        android:textAlignment="center"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/colorMatte"
                        android:fontFamily="@font/rubik"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <ImageView
                        android:background="@color/colorYellow"
                        android:layout_width="20dp"
                        android:layout_height="20dp"/>
                    <TextView
                        android:id="@+id/tvTeamDraw"
                        tools:text="10"
                        android:layout_marginTop="5dp"
                        android:textAlignment="center"
                        android:textColor="@color/colorMatte"
                        android:fontFamily="@font/rubik"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/loss"
                        android:layout_marginTop="5dp"
                        android:textAlignment="center"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/colorMatte"
                        android:fontFamily="@font/rubik"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <ImageView
                        android:background="@color/colorRed"
                        android:layout_width="20dp"
                        android:layout_height="20dp"/>
                    <TextView
                        android:id="@+id/tvTeamLoss"
                        tools:text="10"
                        android:layout_marginTop="5dp"
                        android:textAlignment="center"
                        android:textColor="@color/colorMatte"
                        android:fontFamily="@font/rubik"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>